# pivot

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  pr-and-main.yaml  release.yaml
.sisyphus/plans/: fix-pull-checkout-v2.md  monorepo-repackaging.md  p0-cache-fingerprint-correctness.md  pr-review-sweep.md  remote-progress-bars.md  repro-file-path-targeting.md
docs/: comparison.md  index.md  migrating-from-dvc.md
docs/architecture/: agent-server.md  code-tour.md  engine.md  execution.md  fingerprinting.md  overview.md  tui.md  watch.md
docs/cli/: index.md
docs/concepts/: artifacts-and-dag.md  caching.md  dependencies.md  fingerprinting.md  index.md  loaders.md  outputs.md  parameters.md  pipelines.md
docs/contributing/: cli.md  gotchas.md  loaders.md  setup.md  style.md  testing.md
docs/design/: hot-reload-exploration.md  index.md  watch-engine.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: matrix.md
docs/guides/: ci-integration.md  cross-repo-import.md  multi-pipeline.md  remote-storage.md  tui.md  watch-mode.md
docs/plans/: 2026-02-07-all-pipelines-phase1.md  2026-02-07-all-pipelines-phase2.md  2026-02-07-canonical-artifact-paths.md  2026-02-07-graph-model-adapter.md  2026-02-07-logging-transport-replace-manager-queue.md  2026-02-07-rearchitect-commit-plan.md  2026-02-07-remote-sync-skip-dir-hashes.md  2026-02-07-single-stage-definition-extraction.md  2026-02-07-split-deferred-writes.md  2026-02-07-tui-decoupling.md  2026-02-07-watch-mode-restart-workers.md  2026-02-07-worker-output-capture-bound-memory-fd.md  2026-02-11-engine-coordinator-backend-refactor.md  2026-02-11-engine-hardening.md  2026-02-11-no-fingerprint-decorator.md  2026-02-11-unify-skip-detection-design.md  2026-02-12-docs-overhaul.md  2026-02-12-unify-skip-detection-design.md  2026-02-12-unify-skip-detection-plan.md  2026-02-13-cli-output-redesign-plan.md  2026-02-13-cli-output-redesign.md  2026-02-13-skip-grouping-redesign.md  2026-02-13-split-skipped-status.md
docs/reference/: configuration.md  dependencies.md  matrix.md  outputs.md  parameters.md  pipelines.md  watch.md
docs/solutions/: 2026-02-01-engine-is-context-manager.md  2026-02-02-path-resolution-design-patterns.md  2026-02-08-skip-detection-invariants.md  index.md
docs/solutions/integration-issues/: missing-e2e-test-cli-serve-mode-20260201.md
docs/solutions/runtime-errors/: signal-handler-thread-textual-tui-20260203.md
docs/troubleshooting/: index.md
docs/tutorial/: parameters.md  remote.md  watch.md
skills/adversarial-fingerprint-testing/: SKILL.md  known-root-causes.md
skills/writing-pivot-stages/: SKILL.md
src/pivot/: ast_utils.py  dag.py  discovery.py  dvc_compat.py  dvc_import.py  exceptions.py  fingerprint.py  git.py  loaders.py  metrics.py  outputs.py  path_utils.py  registry.py  stage_def.py  status.py  types.py
src/pivot/cli/: __init__.py  checkout.py  completion.py  config.py  decorators.py  remote.py  repro.py  run.py  serve.py  worker.py
src/pivot/config/: models.py
src/pivot/executor/: commit.py  coordinator.py  core.py  protocol.py  state.py  worker.py
src/pivot/pipeline/: yaml.py
src/pivot/remote/: sync.py
src/pivot/show/: plots.py
src/pivot/storage/: cache.py  lock.py  state.py
src/pivot/tui/: diff_panels.py  run.py  stats.py  types.py
src/pivot/tui/screens/: __init__.py  confirm_commit.py  help.py  history_list.py
src/pivot/tui/styles/: modal.tcss  pivot.tcss
src/pivot/tui/widgets/: __init__.py  debug.py  logs.py  panels.py  stage_list.py  status.py
src/pivot/watch/: _watch_utils.py  engine.py
tests/: conftest.py  helpers.py  test_config_schema.py  test_dep_injection.py  test_dvc_import.py  test_loaders.py  test_return_outputs.py
tests/cli/: test_cli_completion.py  test_repro.py  test_run.py
tests/compat/: test_dvc_compat.py
tests/config/: test_params.py  test_registry.py
tests/core/: test_dag.py  test_pipeline_config.py
tests/execution/: test_execution_modes.py  test_executor.py  test_executor_worker.py  test_lifecycle.py
tests/fingerprint/: README.md  test_callback_vulnerabilities.py  test_change_detection.py  test_determinism.py  test_fingerprint.py  test_integration.py
tests/remote/: conftest.py  test_cli_remote.py  test_s3_remote.py  test_sync.py  test_transfer.py
tests/show/: test_metrics.py  test_plots.py
tests/storage/: test_cache.py  test_incremental_out.py  test_lock.py  test_outputs.py  test_project_lock.py  test_state.py
tests/tui/: test_diff_panels.py  test_history.py  test_run.py
tests/utils/: test_path_overlap.py
tests/watch/: conftest.py  test_engine.py  test_watch_integration.py  test_watch_utils.py  watch_types.py
typings/lmdb/: __init__.pyi
typings/loky/: __init__.pyi
