[project]
name = "pivot"
version = "0.1.0"
description = "High-performance Python pipeline tool with automatic code change detection"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "TBD" }
authors = [{ name = "Internal Team" }]
dependencies = [
  "anyio>=4.0",
  "click>=8.0",
  "deepmerge>=2.0",
  "dulwich>=0.22.0",
  "filelock>=3.12.0",
  "flatten-dict>=0.4.0",
  "grandalf>=0.8",
  "lmdb>=1.4.0",
  "loky>=3.4",
  "networkx>=3.0",
  "pathspec>=0.12.0",
  "pandas>=2.0",
  "pydantic>=2.0",
  "pygtrie>=2.5.0",
  "pyyaml>=6.0",
  "rich>=13.0",
  "ruamel.yaml>=0.18.0",
  "tabulate>=0.9.0",
  "tqdm>=4.66",
  "watchfiles>=1.0",
  "xxhash>=3.0",
]

[project.optional-dependencies]
dvc = ["dvc>=3.0"]
matplotlib = ["matplotlib>=3.5"]
s3 = ["aioboto3>=13.0.0"]
tui = ["pivot-tui"]
docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.26.0",
  "mkdocs-gen-files>=0.5.0",
  "mkdocs-literate-nav>=0.6.0",
  "mkdocs-section-index>=0.3.9",
  "griffe>=1.3.0",
]

[project.scripts]
pivot = "pivot.cli:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "basedpyright>=1.0",
  "botocore-stubs>=1.35.0",
  "joblib>=1.4.0",
  "joblib-stubs>=1.5.0",
  "matplotlib-stubs>=0.3",
  "mypy>=1.19.1",
  "pandas-stubs>=2.0",
  "pivot[dvc]",
  "pivot[matplotlib]",
  "pivot[s3]",
  "pytest-aioboto3>=0.1.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=4.0",
  "pytest-mock>=3.15.1",
  "pytest-rerunfailures>=16.1",
  "pytest-watcher>=0.6.2",
  "pytest-xdist>=3.8.0",
  "pytest>=7.0",
  "ruff>=0.8.0",
  "types-aioboto3[all]>=13.0.0",
]


[tool.basedpyright]
pythonVersion = "3.13"
stubPath = "typings"
exclude = [
  "**/.pytest_cache/**",
  "**/.ruff_cache/**",
  "**/.venv/**",
  "benchmarks",
  "docs",
  "experiments",
  "pipelines",
  "site",
]
reportAny = false
reportExplicitAny = false
reportUnusedCallResult = false
reportImportCycles = false

[[tool.basedpyright.executionEnvironments]]
root = "src"
extraPaths = ["packages/pivot-tui/src"]

[[tool.basedpyright.executionEnvironments]]
root = "tests"
extraPaths = [".", "packages/pivot-tui/src"]
reportUnusedFunction = false
reportUnusedParameter = false
reportUnusedVariable = false
reportPrivateUsage = false
reportRedeclaration = false
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false

[[tool.basedpyright.executionEnvironments]]
root = "packages/pivot-tui/src"

[[tool.basedpyright.executionEnvironments]]
root = "packages/pivot-tui/tests"
extraPaths = ["packages/pivot-tui/tests"]
reportUnusedFunction = false
reportUnusedParameter = false
reportUnusedVariable = false
reportPrivateUsage = false
reportRedeclaration = false
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false

[tool.coverage.run]
source = ["src/pivot"]
branch = true
parallel = true
concurrency = ["multiprocessing"]
omit = ["tests/*", "*/site-packages/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 90

exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "-v",
  "--strict-markers",
  "--tb=short",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
  "benchmark: marks tests as benchmarks",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
  "error:coroutine .* was never awaited:RuntimeWarning",
  "error:Enable tracemalloc:RuntimeWarning",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests", "packages/pivot-tui/src", "packages/pivot-tui/tests"]
exclude = ["benchmarks", "experiments"]

[tool.ruff.lint]
select = [
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "SIM", # flake8-simplify
  "TCH", # type-checking imports
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "N801",   # class name `stage` is intentionally lowercase (decorator pattern)
  "SIM401", # CLAUDE.md requires `if "key" in dict:` pattern for TypedDicts with optional fields
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "C401",   # generator vs comprehension (readability)
  "F811",   # redef allowed in tests (fixtures)
  "N806",   # variable naming (CONSTANT test fixtures)
  "S101",   # assert allowed in tests
  "SIM103", # simplification suggestions (readability)
  "SIM118", # dict.keys() usage (readability)
]
"packages/pivot-tui/tests/**/*.py" = [
  "C401",   # generator vs comprehension (readability)
  "F811",   # redef allowed in tests (fixtures)
  "N806",   # variable naming (CONSTANT test fixtures)
  "S101",   # assert allowed in tests
  "SIM103", # simplification suggestions (readability)
  "SIM118", # dict.keys() usage (readability)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
pivot = { workspace = true }
pivot-tui = { workspace = true }

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "uv lock --upgrade-package pivot && git add uv.lock && uv build"
