[project]
name = "pivot-workspace"
version = "0.1.0"
requires-python = ">=3.13,<3.14"

[dependency-groups]
dev = ["pivot[dev]", "pivot-tui[dev]"]


[tool.basedpyright]
pythonVersion = "3.13"
stubPath = "typings"
exclude = [
  "**/.pytest_cache/**",
  "**/.ruff_cache/**",
  "**/.venv/**",
  "benchmarks",
  "docs",
  "experiments",
  "pipelines",
  "site",
]
reportAny = false
reportExplicitAny = false
reportUnusedCallResult = false
reportImportCycles = false

[[tool.basedpyright.executionEnvironments]]
root = "packages/pivot/src"
extraPaths = ["packages/pivot-tui/src"]

[[tool.basedpyright.executionEnvironments]]
root = "packages/pivot/tests"
extraPaths = [".", "packages/pivot", "packages/pivot-tui/src"]
reportUnusedFunction = false
reportUnusedParameter = false
reportUnusedVariable = false
reportPrivateUsage = false
reportRedeclaration = false
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false

[[tool.basedpyright.executionEnvironments]]
root = "packages/pivot-tui/src"

[[tool.basedpyright.executionEnvironments]]
root = "packages/pivot-tui/tests"
extraPaths = ["packages/pivot-tui/tests"]
reportUnusedFunction = false
reportUnusedParameter = false
reportUnusedVariable = false
reportPrivateUsage = false
reportRedeclaration = false
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false

[tool.coverage.run]
source = ["packages/pivot/src/pivot"]
branch = true
parallel = true
concurrency = ["multiprocessing"]
omit = ["packages/pivot/tests/*", "*/site-packages/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 90

exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]

[tool.pytest.ini_options]
testpaths = ["packages/pivot/tests", "packages/pivot-tui/tests"]
addopts = [
  "-v",
  "--strict-markers",
  "--tb=short",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
  "benchmark: marks tests as benchmarks",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
  "error:coroutine .* was never awaited:RuntimeWarning",
  "error:Enable tracemalloc:RuntimeWarning",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["packages/pivot/src", "packages/pivot/tests", "packages/pivot-tui/src", "packages/pivot-tui/tests"]
exclude = ["benchmarks", "experiments"]

[tool.ruff.lint]
select = [
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "SIM", # flake8-simplify
  "TCH", # type-checking imports
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "N801",   # class name `stage` is intentionally lowercase (decorator pattern)
  "SIM401", # CLAUDE.md requires `if "key" in dict:` pattern for TypedDicts with optional fields
]

[tool.ruff.lint.per-file-ignores]
"packages/pivot/tests/**/*.py" = [
  "C401",   # generator vs comprehension (readability)
  "F811",   # redef allowed in tests (fixtures)
  "N806",   # variable naming (CONSTANT test fixtures)
  "S101",   # assert allowed in tests
  "SIM103", # simplification suggestions (readability)
  "SIM118", # dict.keys() usage (readability)
]
"packages/pivot-tui/tests/**/*.py" = [
  "C401",   # generator vs comprehension (readability)
  "F811",   # redef allowed in tests (fixtures)
  "N806",   # variable naming (CONSTANT test fixtures)
  "S101",   # assert allowed in tests
  "SIM103", # simplification suggestions (readability)
  "SIM118", # dict.keys() usage (readability)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
pivot = { workspace = true }
pivot-tui = { workspace = true }

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "uv lock --upgrade-package pivot && git add uv.lock && uv build"
